--- a/python/04-rock-paper-scissors.html
+++ b/python/04-rock-paper-scissors.html
@@ -55,15 +55,6 @@
       <button class="view-solution">Solution</button>
 
       <div class="code-2">
-        <code><pre>
-<span class="gray">#!/usr/bin/python3</span>
-<span class="gray"># rock-paper-scissors.py</span>
-
-<span class="orange">from</span> random <span class="orange">import</span> randint
-
-points = [<span class="blue">0</span><span class="orange">,</span> <span class="blue">0</span>]
-figures = [<span class="green">Rock"</span><span class="orange">,</span> <span class="green">"Paper"</span><span class="orange">,</span> <span class="green">"Scissors"</span>]
-play = <span class="orange">True</span>
 
 <!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
  2
@@ -216,7 +207,7 @@ play <span style="color: #666666">=</span> <span style="color: #008000">True</sp
 
     finish()
     punkte <span style="color: #666666">=</span> [<span style="color: #666666">0</span>, <span style="color: #666666">0</span>]
-</pre></td></tr></table></div><!--End of hilite.me's code highlighting-->
+</pre></td></tr></table></div><!--End of hilite.me's code highlighting--></div>
 
       </div>
     </main>
