Ubuntu is NOT Linux as a whole. IN fact I wouldn't even call it lInux.

--- a/python/python-installation.html
+++ b/python/python-installation.html
@@ -26,16 +26,16 @@
       <h4><a href="/python">Python</a></h4>
       <h1>Python Installation</h1>
 
-      <p>Here you can see how to install Python 3 on <a href="#linux">Linux</a>, <a href="#macos">macOS</a> or <a href="#windows">Windows</a>.<br>
+      <p>Here you can see how to install Python 3 on <a href="#debian">Debian Linux</a>, <a href="#macos">macOS</a> or <a href="#windows">Windows</a>.<br>
         Moreover we install the Python Development Environment "PyCharm Community Edition". It's free, but pretty helpful.<br>
         But you don't need PyCharm. You can also use IDLE or something else.</p>
 
       <hr>
-      <div id="linux">
-        <h2>Linux</h2>
+      <div id="debian">
+        <h2>Debian</h2>
         <p>Open the terminal and type:</p>
         <code>sudo apt-get install python3</code>
-        <p>Now you have Python 3 installed on your machine, type:</p>
+        <p>If you have Ubuntu, it's suggested to install PyCharm Community Edition. Type:</p>
         <code>
           sudo add-apt-repository ppa:ubuntu-desktop/ubuntu-make<br>
           sudo apt-get update<br>
