--- a/python/08-todolist.html
+++ b/python/08-todolist.html
@@ -62,69 +62,120 @@
 
       <button class="view-solution">Solution</button>
 
-      <div class="code-2">
-        <code><pre>
-<span class="gray">#!/usr/bin/python3</span>
-<span class="gray"># 02-hello-world.py</span>
-
-TODO = []
-
-<span class="orange">def</span> start():
-    <span class="orange">global</span> a_b
+      <!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
+ 2
+ 3
+ 4
+ 5
+ 6
+ 7
+ 8
+ 9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+49
+50
+51
+52
+53
+54
+55
+56
+57</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #008000; font-weight: bold">def</span> <span style="color: #0000FF">start</span>():
+    <span style="color: #008000; font-weight: bold">global</span> a_b
     showTasks()
-    <span class="purple">print</span>(<span class="green">"What do you want to do?"</span>)
-    <span class="purple">print</span>(<span class="green">"(A) Create Task"</span>)
-    <span class="purple">print</span>(<span class="green">"(B) Check Task"</span>)
-    a_b = <span class="purple">input</span>(<span class="green">"A or B: "</span>)
-    <span class="orange">if</span> a_b == <span class="green">"a"</span> or a_b == <span class="green">"A"</span>:
+    <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;What do you want to do?&quot;</span>)
+    <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;(A) Create Task&quot;</span>)
+    <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;(B) Check Task&quot;</span>)
+    a_b <span style="color: #666666">=</span> <span style="color: #008000">input</span>(<span style="color: #BA2121">&quot;A or B: &quot;</span>)
+    <span style="color: #008000; font-weight: bold">if</span> a_b <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;a&quot;</span> <span style="color: #AA22FF; font-weight: bold">or</span> a_b <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;A&quot;</span>:
         createTask()
-    <span class="orange">elif</span> a_b == <span class="green">"b"</span> or a_b == <span class="orange">"B"</span>:
+    <span style="color: #008000; font-weight: bold">elif</span> a_b <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;b&quot;</span> <span style="color: #AA22FF; font-weight: bold">or</span> a_b <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;B&quot;</span>:
         checkTask()
-    <span class="orange">else</span>:
-        <span class="purple">print</span>(<span class="green">"Choose A or B!"</span>)
-        <span class="orange">pass</span>
+    <span style="color: #008000; font-weight: bold">else</span>:
+        <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;Choose A or B!&quot;</span>)
 
-<span class="orange">def</span> showTasks():
-    <span class="orange">global</span> TODO
-    <span class="orange">if</span> TODO:
-        <span class="purple">print</span>(<span class="green">"Your exercises:"</span>)
-        <span class="orange">for</span> i <span class="orange">in</span> TODO:
-            <span class="purple">print</span>(<span class="green">"- "</span><span class="orange">,</span> <span class="deeporange">end=" "</span>)
-            print(i)
-    <span class="orange">else</span>:
-            <span class="purple">print</span>(<span class="green">"Congratulations! You have nothing to do"</span>)
+<span style="color: #008000; font-weight: bold">def</span> <span style="color: #0000FF">showTasks</span>():
+    TODO <span style="color: #666666">=</span> Task<span style="color: #666666">.</span>TODO
+    <span style="color: #008000; font-weight: bold">if</span> TODO:
+        <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;Your exercises:&quot;</span>)
+        <span style="color: #008000; font-weight: bold">for</span> i <span style="color: #AA22FF; font-weight: bold">in</span> TODO:
+            <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;- &quot;</span>, end<span style="color: #666666">=</span><span style="color: #BA2121">&quot; &quot;</span>)
+            <span style="color: #008000; font-weight: bold">print</span>(i)
+    <span style="color: #008000; font-weight: bold">else</span>:
+            <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;Congratulations! You have nothing to do&quot;</span>)
 
-<span class="orange">def</span> createTask():
-    <span class="orange">global</span> TODO
-    <span class="purple">print</span>(<span class="green">"Which task do you want to add?"</span>)
-    task = <span class="purple">input</span>(<span class="green">"Task: "</span>)
-    TODO.append(task)
+<span style="color: #008000; font-weight: bold">def</span> <span style="color: #0000FF">createTask</span>():
+    <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;Which task do you want to add?&quot;</span>)
+    task <span style="color: #666666">=</span> <span style="color: #008000">input</span>(<span style="color: #BA2121">&quot;Task: &quot;</span>)
+    Task<span style="color: #666666">.</span>CreateTask(task)
 
-<span class="orange">def</span> checkTask():
-    <span class="orange">global</span> TODO
-    <span class="purple">print</span>(<span class="green">"Which task do you want to select?"</span>)
-    number = <span class="purple">int</span>(<span class="purple">input</span>(<span class="green">"Number: "</span>))
-    <span class="purple">print</span>(<span class="green">"This one: "</span><span class="orange">,</span> <span class="deeporange">end</span>=<span class="green">""</span>)
-    <span class="purple">print</span>(TODO[number - 1]<span class="orange">,</span> <span class="deeporange">end</span>=<span class="green">""</span>)
-    <span class="purple">print</span>(<span class="green">"?"</span>)
-    really = <span class="purple">input</span>(<span class="green">"Y/N: "</span>)
-    <span class="orange">if</span> really == <span class="green">"Y"</span> <span class="orange">or</span> really == <span class="green">"y"</span>:
-        <span class="orange">del</span> TODO[number - 1]
+<span style="color: #008000; font-weight: bold">class</span> <span style="color: #0000FF; font-weight: bold">Task</span>:
+    <span style="color: #AA22FF">@classmethod</span>
+    <span style="color: #008000; font-weight: bold">def</span> <span style="color: #0000FF">CreateTask</span>(cls, name):
+        cls<span style="color: #666666">.</span>TODO<span style="color: #666666">.</span>append(name)
+    TODO <span style="color: #666666">=</span> []
 
-<span class="purple">print</span>(<span class="green">"Welcome to your To-Do-List"</span>)
+<span style="color: #008000; font-weight: bold">def</span> <span style="color: #0000FF">checkTask</span>():
+    TODO <span style="color: #666666">=</span> Task<span style="color: #666666">.</span>TODO
+    <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;Which task do you want to select?&quot;</span>)
+    number <span style="color: #666666">=</span> <span style="color: #008000">int</span>(<span style="color: #008000">input</span>(<span style="color: #BA2121">&quot;Number: &quot;</span>))
+    <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;This task will be removed. Is this OK?&quot;</span>, end<span style="color: #666666">=</span><span style="color: #BA2121">&quot; &quot;</span>)
+    <span style="color: #008000; font-weight: bold">print</span>(TODO[number <span style="color: #666666">-</span> <span style="color: #666666">1</span>], end<span style="color: #666666">=</span><span style="color: #BA2121">&quot; &quot;</span>)
+    really <span style="color: #666666">=</span> <span style="color: #008000">input</span>(<span style="color: #BA2121">&quot;Y/N: &quot;</span>)
+    <span style="color: #008000; font-weight: bold">if</span> really <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;Y&quot;</span> <span style="color: #AA22FF; font-weight: bold">or</span> really <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;y&quot;</span>:
+        <span style="color: #008000; font-weight: bold">del</span> TODO[number <span style="color: #666666">-</span> <span style="color: #666666">1</span>]
+
+<span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;Welcome to your To-Do-List&quot;</span>)
 start()
-<span class="orange">while True</span>:
+<span style="color: #008000; font-weight: bold">while</span> <span style="color: #008000">True</span>:
     showTasks()
-    a_b = <span class="purple">input</span>(<span class="green">"Create Task (A) or Check Task (B): "</span>)
-    <span class="orange">if</span> a_b == <span class="green">"a"</span> <span class="orange">or</span> a_b == <span class="green">"A"</span>:
+    a_b <span style="color: #666666">=</span> <span style="color: #008000">input</span>(<span style="color: #BA2121">&quot;Create Task (A) or Check Task (B): &quot;</span>)
+    <span style="color: #008000; font-weight: bold">if</span> a_b <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;a&quot;</span> <span style="color: #AA22FF; font-weight: bold">or</span> a_b <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;A&quot;</span>:
         createTask()
-    <span class="orange">elif</span> a_b == <span class="green">"b"</span> <span class="orange">or</span> a_b == <span class="green">"B"</span>:
+    <span style="color: #008000; font-weight: bold">elif</span> a_b <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;b&quot;</span> <span style="color: #AA22FF; font-weight: bold">or</span> a_b <span style="color: #666666">==</span> <span style="color: #BA2121">&quot;B&quot;</span>:
         checkTask()
-    <span class="orange">else</span>:
-        <span class="purple">print</span>(<span class="green">"Choose A or B!"</span>)
-        <span class="orange">pass</span>
-        </pre></code>
-      </div>
+    <span style="color: #008000; font-weight: bold">else</span>:
+        <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;Choose A or B!&quot;</span>)
+        <span style="color: #008000; font-weight: bold">pass</span>
+</pre></td></tr></table></div>
     </main>
 
     <div id="footer"></div>
