--- a/python/08-todolist.html
+++ b/python/08-todolist.html
@@ -62,7 +62,7 @@
 
       <button class="view-solution">Solution</button>
 
-      <!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
+      <!-- HTML generated using hilite.me --><div style="background: #121212; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
  2
  3
  4
