--- a/python/08-todolist.html
+++ b/python/08-todolist.html
@@ -60,9 +60,9 @@
         </code>
       </div>
 
-      <button class="view-solution">Solution</button>
+      <button class="view-solution">Solution</button><div class="code-2">
 
-      <!-- HTML generated using hilite.me --><div style="background: #121212; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
+      <!-- HTML generated using hilite.me --><div style="overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%"> 1
  2
  3
  4
@@ -175,7 +175,8 @@ start()
     <span style="color: #008000; font-weight: bold">else</span>:
         <span style="color: #008000; font-weight: bold">print</span>(<span style="color: #BA2121">&quot;Choose A or B!&quot;</span>)
         <span style="color: #008000; font-weight: bold">pass</span>
-</pre></td></tr></table></div>
+</pre></td></tr></table></div></div>
+      <!--end of highlighter-->
     </main>
 
     <div id="footer"></div>
